--- a/home/style.css
+++ b/home/style.css
@@ -1,38 +1,12 @@
-body {
+html * {
     font-family: montserrat;
     background-color: #121214;
 }
 
-.hide {
-    height: 0px;
-    overflow: hidden;
-}
-
-h1 {
+#repeat {
     font-weight: 300;
-    font-size: 70px;
+    font-size: 20pt;
     line-height: 90%;
     color: #151517;
+    /* color: #f5f5f7; */
 }
-
-/* body { */
-/*     position: absolute; */
-/*     min-height: 100vh; */
-/*     background-image: -moz-element(#faidz); */
-/*     background-repeat: repeat; */
-/*     background-position: center; */
-/* } */
-
-
-.cat_image {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
