--- a/home/style.css
+++ b/home/style.css
@@ -5,7 +5,7 @@ html * {
 
 #repeat {
     font-weight: 300;
-    font-size: 20pt;
+    font-size: 2rem;
     line-height: 90%;
     color: #151517;
     /* color: #f5f5f7; */
