--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,3 @@
-@font-face {
-    font-family: Poppins;
-    font-weight: italic;
-    src: url("/fonts/Poppins-Italic.ttf");
-}
-
 html {
     min-height: 100%;
 }
@@ -23,13 +17,46 @@ body {
 }
 
 #background-text {
-    font: italic 2rem Poppins;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-variation-settings: "slnt" -10;
     fill: #151517;
     line-height: 50%;
     word-spacing: 0%;
 }
 
+h1, h3 {
+    color: #d0d0d9;
+}
+
+h1 {
+    margin-top: 0px;
+}
+
+h3 {
+    margin-bottom: 0px;
+    font-weight: 300;
+}
+
+
 #wip {
-    margin: auto;
-    width: 50%;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-size: 1.2em;
+    line-height: 190%;
+
+    width: 40%;
+    padding: 15px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    background-color: #101012;
+    /* border: 3px solid #151517; */
+    border-radius: 10px;
+    box-shadow: 0 0 20px #060606b3;
 }
